<ScrollView

    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mech.tech.meet.activities.scenario.CreatePostCardActivity">



    <TextView android:text="@string/Your_Name" android:layout_width="match_parent"
    android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:layout_marginLeft="20dp"
 android:layout_marginStart="20dp"
        android:ems="10"
        android:id="@+id/namePara"
        />


    <TextView android:text="@string/College" android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
      />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:id="@+id/collegePara"
        />

    <TextView android:text="@string/Email" android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"

        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"

        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:id="@+id/emailPara"
        />


    <TextView android:text="@string/Message" android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"

        />
    <EditText
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/messagePara" />



    <Button
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/Send_Post_Card"
        android:id="@+id/sendButton" />

</LinearLayout>
</ScrollView>