<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
    android:id="@+id/developer_card_container"
    android:visibility="invisible"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_height="298dp"

        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_marginBottom="16dp"
        >




        <ImageView
            android:contentDescription="@string/app_name"
            android:id="@+id/imagef"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/ny_light"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true" />
        <ImageView
            android:id="@+id/image"
            android:contentDescription="@string/app_name"

            android:layout_width="160dip"
            android:layout_height="160dip"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ny_light"

            android:layout_alignBottom="@+id/imagef"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="70dp"
            android:layout_marginStart="70dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/Ravi_Ailani"
            android:fontFamily="sans-serif-light"
android:textSize="30sp"
            android:typeface="sans"
            android:textStyle="normal"
            android:id="@+id/name"

            android:layout_below="@+id/imagef"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>



    <android.support.v7.widget.CardView


        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_developer"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <TextView android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_width="match_parent"
            android:paddingLeft="40dp"

            android:textSize="21sp"
            android:textColor="@color/white"
            android:background="@color/material_wala_dark_purple"
            android:fontFamily="sans-serif-light"
            android:text="@string/github"
            />

            <TextView
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"
                android:fontFamily="sans-serif-light"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:text="github.com/rvbugs0"/>
        </LinearLayout>
        </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView


        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_developer1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:paddingLeft="40dp"
                android:fontFamily="sans-serif-light"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:background="@color/material_deep_teal_500"

                android:text="@string/projects"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"
                android:textSize="17sp"
                android:fontFamily="sans-serif-light"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:text="rvbugs0@gmail.com"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView


        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_developer2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_width="match_parent"
                android:paddingLeft="40dp"
                android:textSize="21sp"
                android:textColor="@color/white"
                android:background="@color/material_wala_deep_blue"
                android:fontFamily="sans-serif-light"
                android:text="@string/twitter"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"
                android:fontFamily="sans-serif-light"
                android:textSize="17sp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:paddingBottom="10dp"
                android:text="twitter.com/rvailani"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
</ScrollView>
    <!--
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView


        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_developer"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="320dp"
       card_view:cardCornerRadius="0dp">




                <ImageView android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:adjustViewBounds="true"
                    android:id="@+id/cardimage3"
                    />





    </android.support.v7.widget.CardView>


    </LinearLayout>
    </ScrollView>
    -->